--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: project.workflow
 Type: Package
 Title: Project Workflow Management Tools and Utilities
 Description: Various helpers for working with large projects.
+URL: https://github.com/FOR-CAST/project.workflow
 Version: 0.0.1
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
@@ -29,6 +30,7 @@ Suggests:
     covr,
     testthat (>= 3.0.0),
     withr
+BugReports: https://github.com/FOR-CAST/project.workflow/issues
 ByteCompile: yes
 Encoding: UTF-8
 Language: en-CA
