--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,11 @@ export(submoduleInfo)
 export(timestamp)
 export(user)
 import(methods)
-importFrom(Require,modifyList3)
-importFrom(Require,normPath)
-importFrom(Require,pkgSnapshot)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
+importFrom(data.table,set)
+importFrom(fs,path_expand)
+importFrom(fs,path_norm)
 importFrom(rprojroot,find_root)
 importFrom(rprojroot,from_wd)
 importFrom(rprojroot,is_git_root)
@@ -26,4 +26,5 @@ importFrom(rprojroot,is_rstudio_project)
 importFrom(sessioninfo,session_info)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
+importFrom(utils,modifyList)
 importFrom(utils,read.csv)
