add imports for upload.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,19 @@ import(methods)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,set)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
+importFrom(dplyr,pull)
+importFrom(fs,dir_info)
 importFrom(fs,path_expand)
 importFrom(fs,path_norm)
+importFrom(furrr,future_map2_dfr)
+importFrom(furrr,future_map_dfr)
+importFrom(googledrive,drive_ls)
+importFrom(googledrive,drive_mkdir)
+importFrom(googledrive,drive_put)
+importFrom(httr,config)
+importFrom(httr,set_config)
 importFrom(rprojroot,find_root)
 importFrom(rprojroot,from_wd)
 importFrom(rprojroot,is_git_root)
