ensure project title in title case

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,5 +37,6 @@ importFrom(rprojroot,is_rstudio_project)
 importFrom(sessioninfo,session_info)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
+importFrom(tools,toTitleCase)
 importFrom(utils,modifyList)
 importFrom(utils,read.csv)
