fix check problems with prev

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(data.table,data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,set)
 importFrom(data.table,setkey)
+importFrom(data.table,setnames)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,pull)
@@ -45,5 +46,6 @@ importFrom(sessioninfo,session_info)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(tools,toTitleCase)
+importFrom(utils,capture.output)
 importFrom(utils,modifyList)
 importFrom(utils,read.csv)
