--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -27,11 +27,13 @@ jobs:
 
           - {os: windows-latest, r: 'devel', http-user-agent: 'release'}
           - {os: windows-latest, r: 'release'}
-          - {os: windows-latest, r: 'oldrel'}
+          - {os: windows-latest, r: 'oldrel/1'}
+          - {os: windows-latest, r: 'oldrel/2'}
 
           - {os: ubuntu-20.04,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-20.04,   r: 'release'}
-          - {os: ubuntu-20.04,   r: 'oldrel'}
+          - {os: ubuntu-20.04,   r: 'oldrel/1'}
+          - {os: ubuntu-20.04,   r: 'oldrel/2'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
