add project and machine setup helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,11 +12,20 @@ export(packages_from_snapshot)
 export(projectSessionInfo)
 export(reproducibilityReceipt)
 export(sessInfo)
+export(setup_machine)
+export(setup_project)
 export(spatialLibs)
 export(submoduleInfo)
 export(timestamp)
+export(use_module)
 export(user)
 import(methods)
+importFrom(cli,cli)
+importFrom(cli,cli_code)
+importFrom(cli,cli_h1)
+importFrom(cli,cli_h2)
+importFrom(cli,cli_li)
+importFrom(cli,cli_text)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
@@ -46,6 +55,9 @@ importFrom(sessioninfo,session_info)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(tools,toTitleCase)
+importFrom(usethis,proj_activate)
+importFrom(usethis,use_news_md)
+importFrom(usethis,use_readme_md)
 importFrom(utils,capture.output)
 importFrom(utils,modifyList)
 importFrom(utils,read.csv)
