--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Project Workflow Management Tools and Utilities
 Description: Various helpers for working with large projects.
 URL: https://github.com/FOR-CAST/workflowtools
-Version: 0.0.3
+Version: 0.0.3.9000
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
            role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7146-8135"))
@@ -11,6 +11,7 @@ Authors@R: c(
 Depends:
     R (>= 4.2)
 Imports:
+    cli,
     data.table,
     details,
     dplyr,
