--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(description)
 export(drive_upload_folder)
 export(findProjectName)
 export(findProjectPath)
+export(find_modules)
 export(get_module_packages)
 export(gitInfo)
 export(machine)
@@ -37,8 +38,12 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,pull)
 importFrom(fs,dir_info)
+importFrom(fs,dir_ls)
+importFrom(fs,path_dir)
 importFrom(fs,path_expand)
+importFrom(fs,path_file)
 importFrom(fs,path_norm)
+importFrom(fs,path_rel)
 importFrom(furrr,future_map2_dfr)
 importFrom(furrr,future_map_dfr)
 importFrom(googledrive,drive_ls)
@@ -52,6 +57,7 @@ importFrom(rprojroot,from_wd)
 importFrom(rprojroot,is_git_root)
 importFrom(rprojroot,is_rstudio_project)
 importFrom(sessioninfo,session_info)
+importFrom(stats,na.omit)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(tools,toTitleCase)
@@ -59,5 +65,6 @@ importFrom(usethis,proj_activate)
 importFrom(usethis,use_news_md)
 importFrom(usethis,use_readme_md)
 importFrom(utils,capture.output)
+importFrom(utils,globalVariables)
 importFrom(utils,modifyList)
 importFrom(utils,read.csv)
