[v0.0.5] add drive_download_folder()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(check_project_packages)
 export(description)
+export(drive_download_folder)
 export(drive_upload_folder)
 export(findProjectName)
 export(findProjectPath)
@@ -46,11 +47,14 @@ importFrom(fs,path_norm)
 importFrom(fs,path_rel)
 importFrom(furrr,future_map2_dfr)
 importFrom(furrr,future_map_dfr)
+importFrom(googledrive,drive_download)
 importFrom(googledrive,drive_ls)
 importFrom(googledrive,drive_mkdir)
 importFrom(googledrive,drive_put)
 importFrom(httr,config)
 importFrom(httr,set_config)
+importFrom(purrr,map2_dfr)
+importFrom(purrr,walk)
 importFrom(remotes,parse_github_repo_spec)
 importFrom(rprojroot,find_root)
 importFrom(rprojroot,from_wd)
