[v0.0.6] improve `use_module()` messaging and code output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(fs,path_norm)
 importFrom(fs,path_rel)
 importFrom(furrr,future_map2_dfr)
 importFrom(furrr,future_map_dfr)
+importFrom(glue,glue)
 importFrom(googledrive,drive_download)
 importFrom(googledrive,drive_ls)
 importFrom(googledrive,drive_mkdir)
