--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Project Workflow Management Tools and Utilities
 Description: Various helpers for working with large projects.
 URL: https://github.com/FOR-CAST/workflowtools
-Version: 0.0.5
+Version: 0.0.6
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
            role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7146-8135"))
@@ -17,6 +17,7 @@ Imports:
     dplyr,
     fs,
     furrr,
+    glue,
     googledrive,
     httr,
     methods,
@@ -44,6 +45,6 @@ Language: en-CA
 LazyData: true
 License: GPL-3
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Config/testthat/edition: 3
 VignetteBuilder: knitr
