--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,10 +30,10 @@ jobs:
           - {os: windows-latest, r: 'oldrel/1'}
           - {os: windows-latest, r: 'oldrel/2'}
 
-          - {os: ubuntu-20.04,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-20.04,   r: 'release'}
-          - {os: ubuntu-20.04,   r: 'oldrel/1'}
-          - {os: ubuntu-20.04,   r: 'oldrel/2'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'oldrel/1'}
+          - {os: ubuntu-latest,   r: 'oldrel/2'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
