--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(cli,cli_h2)
 importFrom(cli,cli_li)
 importFrom(cli,cli_text)
 importFrom(data.table,":=")
+importFrom(data.table,.SD)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,rbindlist)
@@ -63,6 +64,8 @@ importFrom(rprojroot,is_git_root)
 importFrom(rprojroot,is_rstudio_project)
 importFrom(sessioninfo,session_info)
 importFrom(stats,na.omit)
+importFrom(tibble,enframe)
+importFrom(tidyr,pivot_wider)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(tools,toTitleCase)
